--- a/index.html
+++ b/index.html
@@ -26,16 +26,16 @@ A new Github Repository for the Guessing Game
         <div id='main'>
           <div id='input-parent'>
             <input id='playerInput' type="text" autofocus="autofocus" placeholder="#" maxlength="3">
-            <button type="button" class="btn btn-success" id='submit'type="submit">Submit</button>
+            <button type="button" class="btn btn-success" id='submit'type="submit">Go!</button>
           </div>
 
           <div id='guesses'>
             <ul>
                 <li class="guess">-</li>
-                <li class="guess">2</li>
-                <li class="guess">3</li>
-                <li class="guess">4</li>
-                <li class="guess">5</li>
+                <li class="guess">-</li>
+                <li class="guess">-</li>
+                <li class="guess">-</li>
+                <li class="guess">-</li>
             </ul>
           </div>
 
