--- a/index.html
+++ b/index.html
@@ -11,16 +11,18 @@ A new Github Repository for the Guessing Game
     <title>Guessing Game</title>
 
     <!-- Bootstrap and CSS here-->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Merriweather" rel="stylesheet">   
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
   </head>
-  <body>
+  <body class='stuff'>
 
       <div class="container" id='app'>
-
         <div id='headers'>
           <h1>Guessing Game</h1>
           <h2 id="subtitle">Guess a number between 1-100</h2>
+          <h1 id='hints'></h1>
         </div>
 
         <div id='main'>
@@ -46,31 +48,24 @@ A new Github Repository for the Guessing Game
           </div>
         </div>
       </div>
-
-
-
     <div id='footer' class="center">
       <div class='container'>
-        <div class="row-fluid">
-          <div id="fullstack" class='col-lg-4'>
+        <div>
+          <div id="fullstack" class='col-lg-4 col-md-4 col-sm-4 col-xs-4'>
             <img src='fa-logo@2x.png'></img>
           </div>
-            <div class='col-lg-4'>
+            <div class='col-lg-4 col-md-4 col-sm-4 col-xs-4'>
                     <h4>Project by Brian Deriel</h4>
                   </div>
         
-                  <div id="grace" class='col-lg-4'>
+                  <div id="grace" class='col-lg-4 col-md-4 col-sm-4 col-xs-4'>
                     <img src='grace_hopper_academy.png'></img>
                 </div>
                   </div>
-
-         
-
-
         </div>
       </div>
     </div>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script> 
     <script src="script.js"></script>
   </body>
 </html>
