--- a/index.html
+++ b/index.html
@@ -22,9 +22,11 @@ A new Github Repository for the Guessing Game
         <div id='headers'>
           <h1>Guessing Game</h1>
           <h2 id="subtitle">Guess a number between 1-100</h2>
-          <h1 id='hints'></h1>
+          
         </div>
-
+      <div class="container">
+        <h1 id='hints'></h1>
+      </div>
         <div id='main'>
           <div id='input-parent'>
             <input id='playerInput' type="text" autofocus="autofocus" placeholder="#" maxlength="3">
